tests/idris2/interface016/expected
1/1: Building TwoNum (TwoNum.idr)
Error: While processing right hand side of f. While processing right hand side of f,g. Multiple solutions found in search of:
    Num a

TwoNum.idr:4:7--4:8
   |
 4 |   g = 0
   |       ^

Possible correct results:
    conArg (implicitly bound at TwoNum.idr:4:3--4:8)
    conArg (implicitly bound at TwoNum.idr:2:1--5:1)
